<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rltHomeAct"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TabHost
        android:id="@android:id/tabhost"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" >

            <FrameLayout
                android:id="@android:id/tabcontent"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent" />

            <TabWidget
                android:id="@android:id/tabs"
                android:layout_width="fill_parent"
                android:layout_height="0.0dp"
                android:layout_alignParentBottom="true"
                android:visibility="gone" />

            <RadioGroup
                android:id="@+id/rgpHomeTabs"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <RadioButton
                    android:id="@+id/radHomeRecomment"
                    style="@style/tab_item_style"
                    android:checked="true"
                    android:drawableTop="@drawable/tab_recomment_logo_selector"
                    android:textSize="12sp"
                    android:text="@string/home_recommendation" />

                <RadioButton
                    android:id="@+id/radHomeMovie"
                    style="@style/tab_item_style"
                    android:drawableTop="@drawable/tab_movie_logo_selector"
                    android:textSize="12sp"
                    android:text="@string/home_movie" />

                <RadioButton
                    android:id="@+id/radHomeSearch"
                    style="@style/tab_item_style"
                    android:drawableTop="@drawable/tab_search_logo_selector"
                    android:textSize="12sp"
                    android:text="@string/home_search" />

                <RadioButton
                    android:id="@+id/radHomeNearby"
                    style="@style/tab_item_style"
                    android:drawableTop="@drawable/tab_nearby_logo_selector"
                    android:textSize="12sp"
                    android:text="@string/home_nearby" />

                <RadioButton
                    android:id="@+id/radHomeMine"
                    style="@style/tab_item_style"
                    android:drawableBottom="@null"
                    android:drawableTop="@drawable/tab_mine_logo_selector"
                    android:textSize="12sp"
                    android:text="@string/home_mine" />
            </RadioGroup>
        </RelativeLayout>
    </TabHost>

</RelativeLayout>