<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="@dimen/vip_pay_margin"
    android:paddingRight="@dimen/vip_pay_margin" >

    <RelativeLayout
        android:id="@+id/rltOrder"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/tvwOrderInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:ellipsize="end"
            android:singleLine="true"
            android:text="@string/order_info"
            android:textColor="@color/black"
            android:textSize="@dimen/vip_item_textSize" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvwOrderInfo"
            android:background="@color/order_border"
            android:orientation="vertical"
            android:padding="1dp" >

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:padding="10dp" >

                <TextView
                    android:id="@+id/tvwAccountNotice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:singleLine="true"
                    android:text="@string/tvwAccountNotice"
                    android:textColor="@color/order_desc"
                    android:textSize="@dimen/order_item_textSize" />

                <TextView
                    android:id="@+id/tvwAccountValue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/tvwAccountNotice"
                    android:ellipsize="end"
                    android:singleLine="true"
                    android:text="@string/default_unknown"
                    android:textColor="@color/order_desc"
                    android:textSize="@dimen/order_item_textSize" />
            </RelativeLayout>

            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@color/order_border"
                android:contentDescription="@string/app_name" />

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:padding="10dp" >

                <TextView
                    android:id="@+id/tvwMonthNotice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:singleLine="true"
                    android:text="@string/tvwMonthNotice"
                    android:textColor="@color/order_desc"
                    android:textSize="@dimen/order_item_textSize" />

                <TextView
                    android:id="@+id/tvwMonthValue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/tvwMonthNotice"
                    android:ellipsize="end"
                    android:singleLine="true"
                    android:text="@string/default_unknown"
                    android:textColor="@color/order_desc"
                    android:textSize="@dimen/order_item_textSize" />
            </RelativeLayout>

            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@color/order_border"
                android:contentDescription="@string/app_name" />

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:padding="10dp" >

                <TextView
                    android:id="@+id/tvwPayNotice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:singleLine="true"
                    android:text="@string/tvwPayNotice"
                    android:textColor="@color/order_desc"
                    android:textSize="@dimen/order_item_textSize" />

                <TextView
                    android:id="@+id/tvwPayValue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/tvwPayNotice"
                    android:ellipsize="end"
                    android:singleLine="true"
                    android:text="@string/default_unknown"
                    android:textColor="@color/order_desc"
                    android:textSize="@dimen/order_item_textSize" />
            </RelativeLayout>
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rltPay"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rltOrder" >

        <TextView
            android:id="@+id/tvwPayMethodNotice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:ellipsize="end"
            android:singleLine="true"
            android:text="@string/pay_method"
            android:textColor="@color/black"
            android:textSize="@dimen/vip_item_textSize" />

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvwPayMethodNotice"
            android:background="@drawable/bg_border_selector"
            android:paddingBottom="6dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="6dp" >

            <RadioGroup
                android:id="@+id/rgpPayMethod"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@color/white" >

                <RadioButton
                    android:id="@+id/rbnPayMethod"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:button="@drawable/rad_vip_selector"
                    android:checked="true"
                    android:paddingLeft="@dimen/rad_padding"
                    android:text="@string/pay_method_alipay"
                    android:textColor="@color/order_pay_method"
                    android:textSize="@dimen/vip_item_textSize" />
            </RadioGroup>
        </RelativeLayout>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rltPay"
        android:paddingBottom="@dimen/vip_pay_margin"
        android:paddingTop="10dp" >

        <Button
            android:id="@+id/btnConfirmPay"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/btn_vip_height"
            android:background="@drawable/btn_vip_style_n"
            android:text="@string/confirm_pay"
            android:textColor="@color/white"
            android:textSize="@dimen/btn_vip_textSize" />
    </RelativeLayout>

</RelativeLayout>