<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white" >

    <include
        android:id="@+id/ileNavi"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        layout="@layout/top_navi" />

    <ImageView
        android:id="@+id/line"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_below="@id/ileNavi"
        android:background="@color/btn_navi_line"
        android:contentDescription="@string/app_name" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/line"
        android:paddingBottom="20dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp" >

        <com.m1905.mobile.ui.AlwaysMarqueeTextView
            android:id="@+id/tvwFeedbackDesc"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:ellipsize="marquee"
            android:marqueeRepeatLimit="marquee_forever"
            android:scrollHorizontally="true"
            android:singleLine="true"
            android:text="@string/feedbackDesc"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/edtFeedback"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvwFeedbackDesc"
            android:ellipsize="end"
            android:gravity="top"
            android:hint="@string/edtFeedbackHint"
            android:lines="8"
            android:maxLines="8"
            android:padding="5dp"
            android:background="@drawable/feedback_input_bg"
            android:textColor="@color/black"
            android:textColorHint="@color/grey"
            android:textSize="14sp" />
    </RelativeLayout>

</RelativeLayout>