<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rltMovie"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_marginBottom="@dimen/tab_item_layout_height"
    android:background="@color/white" >

    <RelativeLayout
        android:id="@+id/rltNavi"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/filter_paddingTopBottom"
        android:paddingLeft="@dimen/horizontalSpacing"
        android:paddingRight="@dimen/horizontalSpacing"
        android:paddingTop="@dimen/filter_paddingTopBottom" >

        <Button
            android:id="@+id/btnVipFilm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:background="@drawable/filter_item_bg_selector"
            android:ellipsize="marquee"
            android:padding="8dp"
            android:singleLine="true"
            android:text="@string/tx_vip_film"
            android:textColor="@drawable/filter_item_text_selector"
            android:textSize="@dimen/moive_vip_film_textsize" />

        <Button
            android:id="@+id/btnGenFilm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/btnVipFilm"
            android:background="@drawable/filter_item_bg_selector"
            android:ellipsize="marquee"
            android:padding="8dp"
            android:singleLine="true"
            android:text="@string/tx_general_film"
            android:textColor="@drawable/filter_item_text_selector"
            android:textSize="@dimen/moive_vip_film_textsize" />

        <Button
            android:id="@+id/btnOpenFilter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@drawable/btn_open"
            android:ellipsize="marquee"
            android:paddingRight="10dp"
            android:singleLine="true"
            android:text="@string/tx_filter"
            android:textColor="@color/white"
            android:textSize="@dimen/moive_vip_film_textsize" />
    </RelativeLayout>

    <ImageView
        android:id="@+id/line"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_below="@id/rltNavi"
        android:background="@color/btn_navi_line"
        android:contentDescription="@string/app_name" />

    <RelativeLayout
        android:id="@+id/rltDataView"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@id/line" >

        <com.handmark.pulltorefresh.library.PullToRefreshGridView
            android:id="@+id/reGvwData"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:listSelector="@color/transparent"
            android:numColumns="3"
            android:scrollbars="none"
            android:stretchMode="columnWidth"
            android:verticalSpacing="@dimen/gvw_verticalSpacing" >
        </com.handmark.pulltorefresh.library.PullToRefreshGridView>

        <include
            android:id="@+id/ileErrorBox"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            layout="@layout/no_data_msg_box" />

        <include
            android:id="@+id/ileLoadingBox"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            layout="@layout/loading_box" />
    </RelativeLayout>

</RelativeLayout>